syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "storage/cve.proto";

import "gogoproto/gogo.proto";

package storage;

// Next Tag: 21
message EmbeddedVulnerability {
    enum ScoreVersion {
        V2 = 0; // No unset for automatic backwards compatibility
        V3 = 1;
    }

    enum VulnerabilityType {
        UNKNOWN_VULNERABILITY   = 0;
        IMAGE_VULNERABILITY     = 1;
        K8S_VULNERABILITY       = 2;
        ISTIO_VULNERABILITY     = 3;
        NODE_VULNERABILITY      = 4;
        OPENSHIFT_VULNERABILITY = 5;
    }

    string                     cve                     = 1 [(gogoproto.moretags) = 'search:"CVE,store"'];
    float                      cvss                    = 2 [(gogoproto.moretags) = 'search:"CVSS,store"'];
    string                     summary                 = 3;
    string                     link                    = 4;
    oneof set_fixed_by {
        string                 fixed_by                = 5 [(gogoproto.moretags) = 'search:"Fixed By,store,hidden"'];
    }
    ScoreVersion               score_version           = 8;
    CVSSV2                     cvss_v2                 = 6;
    CVSSV3                     cvss_v3                 = 7;
    google.protobuf.Timestamp  published_on            = 9 [(gogoproto.moretags) = 'search:"CVE Published On"'];
    google.protobuf.Timestamp  last_modified           = 10;
    // For internal purposes only.
    VulnerabilityType          vulnerability_type      = 11;
    repeated VulnerabilityType vulnerability_types     = 18 [(gogoproto.moretags) = 'hash:"ignore"'];
    bool                       suppressed              = 12 [(gogoproto.moretags) = 'search:"CVE Snoozed"'];
    google.protobuf.Timestamp  suppress_activation     = 13;
    google.protobuf.Timestamp  suppress_expiry         = 14;
    // Time when the CVE was first seen, for this specific distro, in the system.
    google.protobuf.Timestamp  first_system_occurrence = 15 [(gogoproto.moretags) = 'policy:"First System Occurrence Timestamp" hash:"ignore"'];
    // Time when the CVE was first seen in this image.
    google.protobuf.Timestamp  first_image_occurrence  = 16 [(gogoproto.moretags) = 'policy:"First Image Occurrence Timestamp" hash:"ignore"'];
    // This was first_node_occurrence
    reserved 17;

    VulnerabilitySeverity      severity                = 19 [(gogoproto.moretags) = 'policy:"Severity"'];
    VulnerabilityState         state                   = 20 [(gogoproto.moretags) = 'search:"Vulnerability State"'];
}

message NodeVulnerability {
    CVEInfo                    cve_base_info           = 1;

    float                      cvss                    = 2 [(gogoproto.moretags) = 'policy:"CVSS"'];
    VulnerabilitySeverity      severity                = 3 [(gogoproto.moretags) = 'policy:"Severity"'];
    oneof set_fixed_by {
        string                 fixed_by                = 4 [(gogoproto.moretags) = 'policy:"Fixed By"'];
    }

    bool                       snoozed                 = 5 [(gogoproto.moretags) = 'policy:"CVE Snoozed"'];
    google.protobuf.Timestamp  snooze_start            = 6;
    google.protobuf.Timestamp  snooze_expiry           = 7;
}
